<resources>
    <string name="app_name">Foody Recipe</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipe_fragment">Favorite</string>
    <string name="food_joke_fragment">Food Joke</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="recipe_image">Recipe image</string>
    <string name="favorite">Favorite</string>
    <string name="duration">Duration</string>
    <string name="error">Error</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="cheap">Cheap</string>
    <string name="healthy">Healthy</string>
    <string name="diary_free">Diary Free</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="back_online">We\'re back online</string>
    <string name="search">Search</string>
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="no_favorite_recipes">No favorite recipes</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="delete_all">Delete All</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="share">Share</string>
    <string name="veg">VEG</string>
    <string name="main_image">Main image</string>
</resources>