<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="favoriteEntity"
            type="com.anggaari.foodrecipe.data.database.entities.FavoritesEntity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/favoriteRecipesRowLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/favoriteRowCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/strokeColor"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardBackgroundColor">

                <ImageView
                    android:id="@+id/favoriteRecipeImageView"
                    android:layout_width="160dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/recipe_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_error_placeholder"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:loadImageUrl="@{favoriteEntity.result.image}"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/favoriteTitleTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_semibold"
                    android:maxLines="2"
                    android:text="@{favoriteEntity.result.title}"
                    android:textColor="@color/titleColor"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/favoriteRecipeImageView"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Title of recipe" />

                <TextView
                    android:id="@+id/favoriteDescriptionTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins"
                    android:maxLines="2"
                    android:textColor="@color/descriptionColor"
                    app:layout_constraintEnd_toEndOf="@+id/favoriteTitleTextView"
                    app:layout_constraintStart_toStartOf="@+id/favoriteTitleTextView"
                    app:layout_constraintTop_toBottomOf="@+id/favoriteTitleTextView"
                    app:parseHtml="@{favoriteEntity.result.summary}"
                    tools:text="Description of recipe" />

                <ImageView
                    android:id="@+id/favoriteImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="32dp"
                    android:contentDescription="@string/favorite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/favoriteTextView"
                    app:layout_constraintStart_toStartOf="@+id/favoriteTextView"
                    app:layout_constraintTop_toBottomOf="@+id/favoriteDescriptionTextView"
                    app:srcCompat="@drawable/ic_favorite"
                    app:tint="@color/red" />

                <TextView
                    android:id="@+id/favoriteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="@{String.valueOf(favoriteEntity.result.aggregateLikes)}"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    app:layout_constraintStart_toStartOf="@+id/favoriteDescriptionTextView"
                    app:layout_constraintTop_toBottomOf="@+id/favoriteImageView"
                    tools:text="100" />

                <ImageView
                    android:id="@+id/clockImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/duration"
                    app:layout_constraintEnd_toEndOf="@+id/clockTextView"
                    app:layout_constraintStart_toStartOf="@+id/clockTextView"
                    app:layout_constraintTop_toTopOf="@+id/favoriteImageView"
                    app:srcCompat="@drawable/ic_clock"
                    app:tint="@color/yellow" />

                <TextView
                    android:id="@+id/clockTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="@color/yellow"
                    android:text="@{String.valueOf(favoriteEntity.result.readyInMinutes)}"
                    app:layout_constraintStart_toEndOf="@+id/favoriteTextView"
                    app:layout_constraintTop_toBottomOf="@+id/clockImageView"
                    tools:text="60" />

                <ImageView
                    android:id="@+id/veganImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/vegan"
                    app:applyVeganColor="@{favoriteEntity.result.vegan}"
                    app:layout_constraintEnd_toEndOf="@+id/veganTextView"
                    app:layout_constraintStart_toStartOf="@+id/veganTextView"
                    app:layout_constraintTop_toTopOf="@+id/clockImageView"
                    app:srcCompat="@drawable/ic_leaf"
                    tools:layout_editor_absoluteY="94dp" />

                <TextView
                    android:id="@+id/veganTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center_horizontal"
                    android:text="@string/veg"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    app:applyVeganColor="@{favoriteEntity.result.vegan}"
                    app:layout_constraintStart_toEndOf="@+id/clockTextView"
                    app:layout_constraintTop_toBottomOf="@+id/veganImageView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>